(Backend):created models and routes for all tasks & categories

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate",
+  "name": "todoapp",
   "version": "1.0.0",
-  "description": "Boilerplate for Projects",
+  "description": "A Todo App Project",
   "main": "index.js",
   "scripts": {
     "start": "node server",
