--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "MS",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.54",
+    "@babel/plugin-proposal-decorators": "7.0.0-beta.54",
     "@babel/plugin-proposal-export-namespace-from": "7.0.0-beta.54",
-    "@babel/plugin-proposal-function-sent": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-function-sent": "7.0.0-beta.54",
     "@babel/plugin-proposal-json-strings": "7.0.0-beta.54",
     "@babel/plugin-proposal-numeric-separator": "7.0.0-beta.54",
     "@babel/plugin-proposal-throw-expressions": "7.0.0-beta.54",
@@ -26,28 +26,43 @@
     "@babel/preset-env": "^7.0.0-beta.55",
     "@babel/preset-react": "^7.0.0-beta.55",
     "@babel/register": "^7.0.0-beta.55",
-    "babel-loader": "^8.0.4",
-    "chai": "^4.2.0",
-    "css-loader": "^2.1.0",
-    "enzyme": "^3.8.0",
+    "axios-mock-adapter": "^1.15.0",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.0.0-beta.4",
+    "chai": "^3.5.0",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-fullstack": "^5.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-react": "^7.10.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
+    "nodemon": "^1.18.3",
+    "npm-merge-driver": "^2.3.5",
     "prettier": "1.11.1",
-    "style-loader": "^0.23.1",
-    "supertest": "^3.3.0",
+    "react-test-renderer": "^16.4.2",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-mock-store": "^1.5.3",
+    "supertest": "^3.1.0",
     "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "@babel/preset-env": "^7.2.3",
-    "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
+    "connect-session-sequelize": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.1",
     "history": "^4.6.3",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.9",
     "pg": "^7.7.1",
     "pg-hstore": "^2.3.2",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
